@@ -2,9 +2,9 @@
 
 \ Translator/Author: Michael Scholz <mi-scholz@users.sourceforge.net>
 \ Created: 05/12/23 00:28:28
-\ Changed: 14/04/28 03:52:17
+\ Changed: 14/11/11 00:07:54
 \
-\ @(#)popup.fs	1.41 4/28/14
+\ @(#)popup.fs	1.42 11/11/14
 
 \ selection-popup-menu
 \ graph-popup-menu
@@ -617,7 +617,7 @@ let: ( -- menu )
 	snd srate { sr }
 	"   chans: %d, srate: %d\n" #( snd channels sr ) string-format ( str )
 	"  format: %s [%s]\n"
-	    #( snd data-format mus-data-format-name
+	    #( snd sample-type mus-sample-type-name
 	       snd header-type mus-header-type-name ) string-format $+
 	"  length: %.3f  (%d frames)\n" #( frms sr f/ frms ) string-format $+
 	snd #t #f maxamp each { mx }
